--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 body {
   margin: 0;
   padding-top: 3.5rem;
-  font-family: sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 
 header .bg-dark { background-color: #4b2f83 !important; }
+
+header .navbar { font-weight: 300!important; }
